k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: slihatim/etudiants-frontend:1.5
          ports:
            - containerPort: 80
              name: http-port
          livenessProbe:
            httpGet:
              path: /healthz      # Endpoint pour vérifier la santé
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness    # Endpoint pour vérifier la disponibilité
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /startup      # Endpoint pour vérifier le démarrage
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
